disable line spacing for fix bug with scrollbar in textarea

--- a/src/main/resources/notepack/default.css
+++ b/src/main/resources/notepack/default.css
@@ -64,7 +64,7 @@
     -fx-background-color: text-area-background;
 }
 .text-area .text {
-     -fx-line-spacing: 4px;
+     /*-fx-line-spacing: 4px;*/
 }
 
 .text-area:focused .content {
